--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -15,7 +15,7 @@
     <div class="container" role="main">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <%= link "Organizations", to: org_path(@conn, :index) %>
+          <li><%= link "Organizations", to: org_path(@conn, :index) %></li>
 
           <%= if logged_in?(@conn) do %>
             <li><%= current_user(@conn).email %></li>
