--- a/web/templates/registration/new.html.eex
+++ b/web/templates/registration/new.html.eex
@@ -21,6 +21,11 @@
   </div>
 
   <div class="form-group">
+    <label>Password Confirmation</label>
+    <%= password_input f, :passwd_confirmation, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Signup", class: "btn btn-primary" %>
   </div>
 <% end %>
